--- a/Bakery/Views/Orders/Index.cshtml
+++ b/Bakery/Views/Orders/Index.cshtml
@@ -1,25 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My To-Do List!</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  </head>
-  <body>
-    @using Bakery.Models;
+@using Bakery.Models;
 
-    <h1>Categories</h1>
+<h1>Vendor List</h1>
 
-    @if (@Model.Count == 0)
-    {
-      <h3>No categories have been added yet!</h3>
-    } 
+@if (Model.Count == 0)
+{
+  <p>There are no vendors in the list.</p>
+}
+<ul>
+  @foreach (Order order in Model)
+  {
+     <li><a href='/orders/@order.Id'>@order.Description</a></li>
+  }
+</ul>
+<a href="/orders/new">Add a new vendor.</a>
 
-    @foreach (Order order in Model)
-    {
-      <h3><a href='/order/@order.Id'>@order.Name</a></h3>
-    }
-
-    <p><a href='/'>Back home</a></p>
-  </body>
-</html>
+<form action="/orders/delete" method="post">
+  <button type="submit" name="button">Clear All Orders</button>
+</form>
