--- a/Bakery/Views/Orders/New.cshtml
+++ b/Bakery/Views/Orders/New.cshtml
@@ -1,21 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My To-Do List!</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Add a category</h1>
-    <p>Add a category here:</p>
+<h1>Add a new order to @Model.Name</h1>
 
-    <form action="/categories" method="post">
-      <label for="categoryName">Category name</label>
-      <input id="categoryName" name="categoryName" type="text">
-      <button type="submit">Add</button>
-    </form>
-
-    <p><a href="/">Back home</a></p>
-    <p><a href="/categories">Back to categories.</a></p>
-  </body>
-</html>
+<form action="/vendors/@Model.Id/orders" method="post">
+  <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
+  <label for="orderDescription">Order Description</label>
+  <input id="orderDescription" name="orderDescription" type="text">
+  <button type='submit'>Add Order</button>
+</form>
