--- a/Bakery/Views/Orders/Show.cshtml
+++ b/Bakery/Views/Orders/Show.cshtml
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My To-Do List!</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  </head>
-  <body>
-    @using Bakery.Models;
+<h1>Order Details: </h1>
 
-    <h3>Here are all the items in this category:</h3>
+<h2>@Model["order"].Description</h2>
+<h3>Order: @Model["vendor"].Name</h3>
 
-    <ol>
-    @foreach (Item item in @Model["items"])
-    {
-      <li><a href='/categories/@Model["category"].Id/items/@item.Id'>@item.Description</a></li>
-    }
-    </ol>
-
-    <p><a href='/categories/@Model["category"].Id/items/new'>Add a new item</a></p>
-    <p><a href='/categories'>Return to category list</a></p>
-    <p><a href='/'>Return to Main Page</a></p>
-  </body>
-</html>
+<a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
+<a href='/vendors'>View all vendors</a>
